--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(bj_basic C)
 
 set(CMAKE_C_STANDARD 99)
 
-add_executable(bj_basic calcu.c 3003.c 10430.c)
+add_executable(bj_basic calcu.c 3003.c 10430.c 2588.c)
